# app/api/join/join.js
@@ -19,9 +19,10 @@ async function getJoin() {
                 room: 'test',
                 roomPassword: false,
                 name: 'mirotalksfu',
-                audio: true,
-                video: true,
-                screen: true,
+                avatar: false,
+                audio: false,
+                video: false,
+                screen: false,
                 hide: false,
                 notify: true,
                 duration: 'unlimited',
