# app/api/join/join.php
@@ -20,9 +20,10 @@ $data = array(
     "room"          => "test",
     "roomPassword"  => false,
     "name"          => "mirotalksfu",
-    "audio"         => true,
-    "video"         => true,
-    "screen"        => true,
+    "avatar"        => false,
+    "audio"         => false,
+    "video"         => false,
+    "screen"        => false,
     "hide"          => false,
     "notify"        => true,
     "duration"      => "unlimited",
