# app/api/join/join.py
@@ -15,9 +15,10 @@ data = {
     "room": "test",
     "roomPassword": "false",
     "name": "mirotalksfu",
-    "audio": "true",
-    "video": "true",
-    "screen": "true",
+    "avatar": "false",
+    "audio": "false",
+    "video": "false",
+    "screen": "false",
     "hide": "false",
     "notify": "true",
     "duration": "unlimited",
